# OpenGLRenderer

./: CMakeLists.txt  bld  run
headers/: buffer.h  engine.h  glad.h  renderer.h  vertex.h
headers/base/: material.h  mesh.h  shader.h  shaderProgram.h  transform.h  triangle.h  vector3.h  vertex.h  window.h
headers/engine/: assetManager.h  buffer.h  engine.h  engineInfo.h  renderer.h  utility.h
headers/gameObjects/: cameraObject.h  gameObject.h  gameObject3D.h  gameObjectFactory.h  meshObject.h
src/: buffer.cpp  engine.cpp  glad.cpp  main.cpp  renderer.cpp
src/base/: material.cpp  mesh.cpp  shader.cpp  shaderProgram.cpp  transform.cpp  triangle.cpp  vector3.cpp  window.cpp
src/engine/: assetManager.cpp  buffer.cpp  engine.cpp  engineInfo.cpp  renderer.cpp  utility.cpp
src/gameObjects/: cameraObject.cpp  gameObject.cpp  gameObject3D.cpp  gameObjectFactory.cpp  meshObject.cpp
src/shaders/ps/: psDefault.glsl
src/shaders/vs/: vsDefault.glsl
